--- a/SportsStore6/appsettings.json
+++ b/SportsStore6/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Data": {
     "SSDB": {
-      //"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SSDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-      "ConnectionString": "Server=tcp:mssa6dbserver.database.windows.net,1433; Initial Catalog=MySportsStore6; Persist Security Info = False;User ID = MssaAdmin; Password=MssaPa$$W0rd; MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SSDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+      //"ConnectionString": "Server=tcp:mssa6dbserver.database.windows.net,1433; Initial Catalog=MySportsStore6; Persist Security Info = False;User ID = MssaAdmin; Password=MssaPa$$W0rd; MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
     }
   },
   "Logging": {
