--- a/SportsStore6/appsettings.json
+++ b/SportsStore6/appsettings.json
@@ -1,11 +1,12 @@
 {
   "Data": {
     "SSDB": {
-      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SSDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-      //"ConnectionString": "Server=tcp:mssa6dbserver.database.windows.net,1433; Initial Catalog=MySportsStore6; Persist Security Info = False;User ID = MssaAdmin; Password=MssaPa$$W0rd; MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+      //"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SSDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "Server=tcp:sportsstoreatmar.database.windows.net,1433;Initial Catalog=products;Persist Security Info=False;User ID=sportsstoreadmin;Password=P4ssw0rd123$;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
     "SSIdentity": {
-      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+      //"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "Server=tcp:sportsstoreatmar.database.windows.net,1433;Initial Catalog=identity;Persist Security Info=False;User ID=sportsstoreadmin;Password=P4ssw0rd123$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
   },
   "Logging": {
